--- a/software/client/app/src/main/res/layout/fragment_individual_registration.xml
+++ b/software/client/app/src/main/res/layout/fragment_individual_registration.xml
@@ -5,7 +5,7 @@
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.IndividualRegistrationFragment"
+    tools:context=".fragment.individual.IndividualRegistrationFragment"
     tools:layout_editor_absoluteY="81dp">
 
     <LinearLayout
