--- a/software/client/app/src/main/res/layout/content_home.xml
+++ b/software/client/app/src/main/res/layout/content_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activity.HomeIndividualActivity"
+    tools:context=".activity.individual.HomeIndividualActivity"
     tools:showIn="@layout/app_bar_home">
 
 </android.support.constraint.ConstraintLayout>
