Brief: login, request Changed dtos to new architecture

--- a/software/client/app/src/main/res/layout/fragment_group_request.xml
+++ b/software/client/app/src/main/res/layout/fragment_group_request.xml
@@ -6,6 +6,19 @@
     android:layout_height="match_parent"
     tools:layout_editor_absoluteY="81dp">
 
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="56dp"
+        android:ems="10"
+        android:hint="broken: have to define criteria"
+        android:inputType="numberDecimal"
+        android:maxLength="2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <CheckBox
         android:id="@+id/check_group_request_subscribe"
         android:layout_width="wrap_content"
@@ -25,15 +38,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
-        android:ems="10"
-        android:inputType="numberDecimal"
-        android:maxLength="2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
