--- a/software/client/app/src/main/res/layout/activity_third_party_request.xml
+++ b/software/client/app/src/main/res/layout/activity_third_party_request.xml
@@ -40,7 +40,7 @@
                 android:id="@+id/tab_request_group"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/tab_third_party" />
+                android:text="@string/tab_request_group" />
 
         </android.support.design.widget.TabLayout>
     </android.support.design.widget.AppBarLayout>
