Brief: login Updated new individual information Added logo to login page

--- a/software/client/app/src/main/res/layout/fragment_individual_request.xml
+++ b/software/client/app/src/main/res/layout/fragment_individual_request.xml
@@ -6,17 +6,37 @@
     android:layout_height="match_parent"
     tools:layout_editor_absoluteY="81dp">
 
-    <EditText
-        android:id="@+id/text_individual_request_ssn"
-        android:layout_width="wrap_content"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/textInputLayout3"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="62dp"
-        android:ems="10"
-        android:hint="@string/hint_ssn"
-        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="@+id/textInputLayout4"
+        app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/text_individual_request_ssn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/hint_ssn"
+            android:inputType="textPersonName" />
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/textInputLayout4"
+        android:layout_width="220dp"
+        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">
+
+        <android.support.design.widget.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/text_motivation"
+            android:inputType="text" />
+    </android.support.design.widget.TextInputLayout>
 
     <CheckBox
         android:id="@+id/check_individual_request_subscribe"
@@ -24,25 +44,14 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="45dp"
         android:text="@string/text_subscribe"
-        app:layout_constraintStart_toStartOf="@+id/editText2"
-        app:layout_constraintTop_toTopOf="@+id/editText2" />
-
-    <EditText
-        android:id="@+id/editText2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/text_motivation"
-        android:inputType="textPersonName"
-        android:singleLine="false"
-        app:layout_constraintStart_toStartOf="@+id/text_individual_request_ssn"
-        app:layout_constraintTop_toBottomOf="@+id/text_individual_request_ssn" />
+        app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
+        app:layout_constraintTop_toTopOf="@+id/textInputLayout4" />
 
     <Button
         android:id="@+id/button_individual_request_send"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="164dp"
+        android:layout_marginBottom="161dp"
         android:text="@string/text_confirm"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
