--- a/software/client/app/src/main/res/layout/fragment_third_party_registration.xml
+++ b/software/client/app/src/main/res/layout/fragment_third_party_registration.xml
@@ -10,9 +10,15 @@
 
     <ScrollView
         android:id="@+id/scrollView2"
-        android:layout_width="343dp"
-        android:layout_height="435dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="35dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="35dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -25,71 +31,97 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="@string/text_credentials"
+                android:textSize="24sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="@string/text_credentials" />
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <EditText
-                android:id="@+id/text_registration_third_party_username"
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="@string/hint_username"
-                android:inputType="textPersonName" />
+                android:layout_height="match_parent">
 
-            <EditText
-                android:id="@+id/text_registration_third_party_password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="@string/hint_password"
-                android:inputType="text|textPassword"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/text_registration_third_party_username"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/hint_username"
+                    android:inputType="textPersonName"
+                    android:maxLength="@integer/default_length"
+                    android:minEms="2" />
+            </android.support.design.widget.TextInputLayout>
 
-            <EditText
-                android:id="@+id/text_registration_third_party_repeat_password"
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="@string/hint_repeat_password"
-                android:inputType="textPassword"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/text_registration_individual_password" />
+                android:layout_height="match_parent">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/text_registration_third_party_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/hint_password"
+                    android:inputType="textPassword"
+                    android:maxLength="@integer/default_length" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/text_registration_third_party_repeat_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/hint_repeat_password"
+                    android:inputType="textPassword"
+                    android:maxLength="@integer/default_length" />
+            </android.support.design.widget.TextInputLayout>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/text_organization_data" />
+                android:text="@string/text_organization_data"
+                android:textSize="24sp" />
 
-            <EditText
-                android:id="@+id/text_registration_third_party_vat"
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="@string/hint_vat"
-                android:inputType="text"
-                android:maxLength="11"
-                android:minEms="11"
-                android:singleLine="false" />
+                android:layout_height="match_parent">
 
-            <EditText
-                android:id="@+id/text_registration_third_party_email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="@string/hint_email"
-                android:inputType="textEmailAddress" />
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/text_registration_third_party_vat"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/hint_vat"
+                    android:inputType="text"
+                    android:maxLength="@integer/ssn_length" />
+            </android.support.design.widget.TextInputLayout>
 
-            <EditText
-                android:id="@+id/text_registration_third_party_name"
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="@string/hint_organization_name"
-                android:inputType="textPersonName" />
+                android:layout_height="match_parent">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/text_registration_third_party_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/hint_email"
+                    android:inputType="textEmailAddress"
+                    android:maxLength="@integer/default_length"
+                    android:minEms="2" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/text_registration_third_party_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/hint_organization_name"
+                    android:inputType="textPersonName"
+                    android:maxLength="@integer/default_length" />
+            </android.support.design.widget.TextInputLayout>
 
             <Button
                 android:id="@+id/button_third_party_register"
@@ -100,5 +132,4 @@
                 tools:layout_editor_absoluteY="373dp" />
         </LinearLayout>
     </ScrollView>
-
 </android.support.constraint.ConstraintLayout>
