--- a/software/client/app/src/main/res/values/colors.xml
+++ b/software/client/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#d81b60</color>
     <color name="colorWhite">#ffffff</color>
     <color name="colorGreen">#31ac31</color>
     <color name="colorSoftBlue">#454599</color>
